--- a/index.html
+++ b/index.html
@@ -59,8 +59,12 @@
                         <i data-lucide="satellite" class="text-white w-6 h-6"></i>
                     </div>
                     <div>
-                        <span class="text-2xl font-bold text-slate-900">TSATSense</span>
-                        <span class="text-xs text-black-600 font-semibold block -mt-1">powered by telkomsat</span>
+                        <span class="text-3xl font-semibold">
+                        <span class="text-black">tsat</span><span class="text-red-600">sense</span>
+                      </span>
+                      <span class="text-xs text-gray-500 block -mt-1">
+                        powered by telkomsat
+                      </span>
                     </div>
                 </div>
                 
