--- a/index.html
+++ b/index.html
@@ -60,10 +60,12 @@
                     </div>
                     <div>
                         <span class="text-3xl font-semibold">
-                        <span class="text-black">tsat</span><span class="text-red-600">sense</span>
+                        <span class="text-black">TSATSense</span>
                       </span>
                       <span class="text-xs text-gray-500 block -mt-1">
-                        powered by telkomsat
+                          powered by <span class="font-semibold text-gray-700">
+                            telkom<span class="text-red-600">sat</span>
+                          </span>
                       </span>
                     </div>
                 </div>
