--- a/index.html
+++ b/index.html
@@ -761,7 +761,7 @@
                     <ul class="space-y-2 text-sm">
                         <li class="flex items-center space-x-2">
                             <i data-lucide="map-pin" class="w-4 h-4"></i>
-                            <span>Jakarta, Indonesia</span>
+                            <span>Bogor, Indonesia</span>
                         </li>
                         <li class="flex items-center space-x-2">
                             <i data-lucide="mail" class="w-4 h-4"></i>
